# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  GameLogic.cpp  GameLogic.hpp  Main.cpp
